[gd_scene load_steps=11 format=3 uid="uid://dd15sdagi3yeb"]

[ext_resource type="Script" path="res://main.gd" id="1_r3jtu"]
[ext_resource type="PackedScene" uid="uid://phuekkypyokb" path="res://Scenes/square.tscn" id="1_thsku"]
[ext_resource type="Script" path="res://Scripts/layer.gd" id="2_ev62v"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_oef75"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_5oohn"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_ci1xg"]
sky_material = SubResource("ProceduralSkyMaterial_5oohn")

[sub_resource type="Environment" id="Environment_4ywod"]
background_mode = 2
sky = SubResource("Sky_ci1xg")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="Animation" id="Animation_ydefg"]
resource_name = "layer_four_anim"
length = 4.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LayerFour:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-2, 0, 0), Vector3(7, 0, 0), Vector3(7, -3, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LayerThree:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(3, 0, 0), Vector3(3, -2, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LayerTwo:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-3, 0, 0), Vector3(-3, -1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LayerOne:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-9, 0, 0), Vector3(-9, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Camera3D:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-5, 5, 5), Vector3(0, 10, 10), Vector3(0, 10, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Camera3D:rotation")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.436332, -0.785398, 0), Vector3(-0.436332, 0, 0), Vector3(-1.5708, 0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("LayerThree:rotation")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(3, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.0349066)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("LayerOne:rotation")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(3, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.174533)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("LayerTwo:rotation")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(3, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.0349066)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("LayerFour:rotation")
tracks/9/interp = 2
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(3, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.0872665)]
}

[sub_resource type="Animation" id="Animation_am3os"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LayerFour:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-2, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LayerThree:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LayerTwo:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LayerOne:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Camera3D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 3, 10)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Camera3D:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.436332, 0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("LayerThree:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0.0349066)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("LayerOne:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, -0.0872665)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("LayerTwo:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, -0.0349066)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("LayerFour:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0.0872665)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r8lxa"]
_data = {
"RESET": SubResource("Animation_am3os"),
"layer_four_anim": SubResource("Animation_ydefg")
}

[node name="Main" type="Node"]
script = ExtResource("1_r3jtu")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.017334, 0, 0)
material_override = SubResource("StandardMaterial3D_oef75")
size = Vector3(200, 0.001, 200)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_4ywod")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.906308, 0.422618, 0, -0.422618, 0.906307, 0, 3, 10)

[node name="LayerOne" type="Node3D" parent="."]
transform = Transform3D(0.996195, 0.0871557, 0, -0.0871557, 0.996195, 0, 0, 0, 1, 0, 0, 0)
script = ExtResource("2_ev62v")

[node name="Square0" parent="LayerOne" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -2)

[node name="Square1" parent="LayerOne" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -2)

[node name="Square2" parent="LayerOne" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="Square3" parent="LayerOne" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -2)

[node name="Square4" parent="LayerOne" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -1)

[node name="Square5" parent="LayerOne" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -1)

[node name="Square6" parent="LayerOne" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="Square7" parent="LayerOne" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -1)

[node name="Square8" parent="LayerOne" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0)

[node name="Square9" parent="LayerOne" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0)

[node name="Square10" parent="LayerOne" instance=ExtResource("1_thsku")]

[node name="Square11" parent="LayerOne" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)

[node name="Square12" parent="LayerOne" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 1)

[node name="Square13" parent="LayerOne" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 1)

[node name="Square14" parent="LayerOne" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)

[node name="Square15" parent="LayerOne" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1)

[node name="LayerTwo" type="Node3D" parent="."]
transform = Transform3D(0.999391, 0.0348995, 0, -0.0348995, 0.999391, 0, 0, 0, 1, 0, 0, 0)
script = ExtResource("2_ev62v")

[node name="Square0" parent="LayerTwo" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, -2)

[node name="Square1" parent="LayerTwo" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1, -2)

[node name="Square2" parent="LayerTwo" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -2)

[node name="Square3" parent="LayerTwo" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, -2)

[node name="Square4" parent="LayerTwo" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, -1)

[node name="Square5" parent="LayerTwo" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1, -1)

[node name="Square6" parent="LayerTwo" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1)

[node name="Square7" parent="LayerTwo" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, -1)

[node name="Square8" parent="LayerTwo" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, 0)

[node name="Square9" parent="LayerTwo" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1, 0)

[node name="Square10" parent="LayerTwo" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Square11" parent="LayerTwo" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0)

[node name="Square12" parent="LayerTwo" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, 1)

[node name="Square13" parent="LayerTwo" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1, 1)

[node name="Square14" parent="LayerTwo" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1)

[node name="Square15" parent="LayerTwo" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1)

[node name="LayerThree" type="Node3D" parent="."]
transform = Transform3D(0.999391, -0.0348995, 0, 0.0348995, 0.999391, 0, 0, 0, 1, 0, 0, 0)
script = ExtResource("2_ev62v")

[node name="Square0" parent="LayerThree" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 2, -2)

[node name="Square1" parent="LayerThree" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 2, -2)

[node name="Square2" parent="LayerThree" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -2)

[node name="Square3" parent="LayerThree" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2, -2)

[node name="Square4" parent="LayerThree" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 2, -1)

[node name="Square5" parent="LayerThree" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 2, -1)

[node name="Square6" parent="LayerThree" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -1)

[node name="Square7" parent="LayerThree" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2, -1)

[node name="Square8" parent="LayerThree" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 2, 0)

[node name="Square9" parent="LayerThree" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 2, 0)

[node name="Square10" parent="LayerThree" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="Square11" parent="LayerThree" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2, 0)

[node name="Square12" parent="LayerThree" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 2, 1)

[node name="Square13" parent="LayerThree" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 2, 1)

[node name="Square14" parent="LayerThree" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 1)

[node name="Square15" parent="LayerThree" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2, 1)

[node name="LayerFour" type="Node3D" parent="."]
transform = Transform3D(0.996195, -0.0871557, 0, 0.0871557, 0.996195, 0, 0, 0, 1, -2, 0, 0)
script = ExtResource("2_ev62v")

[node name="Square0" parent="LayerFour" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -2)

[node name="Square1" parent="LayerFour" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 3, -2)

[node name="Square2" parent="LayerFour" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 3, -2)

[node name="Square3" parent="LayerFour" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 3, -2)

[node name="Square4" parent="LayerFour" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -1)

[node name="Square5" parent="LayerFour" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 3, -1)

[node name="Square6" parent="LayerFour" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 3, -1)

[node name="Square7" parent="LayerFour" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 3, -1)

[node name="Square8" parent="LayerFour" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)

[node name="Square9" parent="LayerFour" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 3, 0)

[node name="Square10" parent="LayerFour" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 3, 0)

[node name="Square11" parent="LayerFour" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 3, 0)

[node name="Square12" parent="LayerFour" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 1)

[node name="Square13" parent="LayerFour" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 3, 1)

[node name="Square14" parent="LayerFour" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 3, 1)

[node name="Square15" parent="LayerFour" instance=ExtResource("1_thsku")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 3, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r8lxa")
}
